--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vmm-meme-recruit</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Vishal Merit Mart: Job Ya Joke?</title>
+    <meta name="description" content="Apply now to laugh, cry, and maybe get an unemployment scroll!" />
+    <meta name="author" content="Fariz Anjum" />
 
-    <meta property="og:title" content="vmm-meme-recruit" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Vishal Merit Mart: Job Ya Joke?" />
+    <meta property="og:description" content="Apply now to laugh, cry, and maybe get an unemployment scroll!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@Apply now to laugh, cry, and maybe get an unemployment scroll! />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
