--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta property="og:title" content="Vishal Merit Mart: Job Ya Joke?" />
     <meta property="og:description" content="Apply now to laugh, cry, and maybe get an unemployment scroll!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="@Lol_applynow" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Apply now to laugh, cry, and maybe get an unemployment scroll!" />
-    <meta name="twitter:image" content="@ApplynowtoLOL" />
+    <meta name="twitter:site" content="@ApplyNowLOL" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
